--- a/package.json
+++ b/package.json
@@ -35,7 +35,10 @@
     "trailingComma": "all"
   },
   "dependencies": {
+    "@apollo/client": "^3.4.5",
+    "cross-fetch": "^3.1.4",
     "firebase": "^8.8.0",
+    "graphql": "^15.5.1",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
